--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,3 +76,14 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+/* Hide scrollbar  */
+.hide-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari, and Opera */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
